<resources>
    <string name="app_name">SportFieldsReservation</string>
    <string name="facebook_app_id">481788682548968</string>
    <string name="fb_login_protocol_scheme">fb481788682548968</string>
    <string name="sign_in">SIGN IN</string>
    <string name="join_now">JOIN NOW</string>
    <string name="loginmessage">loginMessage</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="your_age">Your age</string>
    <string name="location">Location</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="logincaps">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>

</resources>
