<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/register"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/loginmessage"
        android:src="@drawable/logo" />


    <ImageView
        android:id="@+id/sfrText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:contentDescription="@string/loginmessage"
        android:src="@drawable/sfr" />


    <ImageView
        android:id="@+id/logoMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sfrText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/loginmessage"
        android:src="@drawable/message_main" />


    <EditText
        android:id="@+id/nameUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoMessage"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/numberUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameUser"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/your_phone_number"
        android:inputType="numberSigned" />


    <EditText
        android:id="@+id/birthdateUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numberUser"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:editable="false"
        android:hint="@string/your_age" />

    <EditText
        android:id="@+id/locationUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthdateUser"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/location"
        android:inputType="text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButtonRegister"
        android:layout_width="201dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:text="@string/next"
        android:textAlignment="center"
        android:layout_below="@+id/locationUser"
        android:textSize="15sp"
        app:backgroundTint="#02B875"
        app:cornerRadius="20dp"
        app:strokeColor="#02B875"
        app:strokeWidth="1dp" />

</RelativeLayout>