<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/register"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/loginmessage"
        android:src="@drawable/logo" />


    <ImageView
        android:id="@+id/sfrText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:contentDescription="@string/loginmessage"
        android:src="@drawable/sfr" />


    <ImageView
        android:id="@+id/logoMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sfrText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/loginmessage"
        android:src="@drawable/message_main" />


    <EditText
        android:id="@+id/emailUser"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_below="@+id/logoMessage"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:hint="@string/email"
        android:background="@drawable/edit_text_shape_states"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordUser"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_below="@+id/emailUser"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:background="@drawable/edit_text_shape_states"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/confirmPasswordUser"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_below="@+id/passwordUser"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:hint="@string/confirm_password"
        android:background="@drawable/edit_text_shape_states"
        android:inputType="textPassword" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        android:layout_width="201dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/next"
        android:textAlignment="center"
        android:layout_below="@+id/confirmPasswordUser"
        android:textSize="15sp"
        app:backgroundTint="#02B875"
        app:cornerRadius="20dp"
        app:strokeColor="#02B875"
        app:strokeWidth="1dp" />

</RelativeLayout>